objects/ortoo_qra__Match_Field__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipName>Match_Field_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QA Match Field Criteria (No Longer Used)</label>
    <nameField>
        <label>Match Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Match Field Criteria (No Longer Used)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>